--- a/orak/templates/home.html
+++ b/orak/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="card" style="width: 50rem; margin-top: 50px; margin-left: 30%;">
+<div class="card" style="width: 50rem; margin: 0 auto; margin-top: 20px;">
   <div class="card-header" style="background-color: #4A3386; text-align: center;">
     {% if env %}
     <h4 style="color: #FFCA08">Environment Selected: {{ env }}</h4>
@@ -30,7 +30,7 @@
 </div>
 
 
-<div class="card" style="width: 50rem; margin-top: 50px; margin-left: 30%;">
+<div class="card" style="width: 50rem; margin: 0 auto; margin-top: 20px;">
   <div class="card-header" style="background-color: #4A3386; text-align: center;">
     <h4 style="color: #FFCA08"> Other Utils </h4>
   </div>
@@ -67,7 +67,7 @@
           alert('Error Occured!')
         }
       })
-    })
+    });
   })
 </script>
 
