--- a/orak/templates/login.html
+++ b/orak/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="card" style="width: 50rem; margin-top: 50px; margin-left: 30%;">
+<div class="card" style="width: 50rem; margin: 0 auto; margin-top: 20px;">
     <div class="card-header" style="background-color: #4A3386; text-align: center;">
         <h4 style="color: #FFCA08"> Orak </h4>
     </div>
