Additional changes for ecommerce util

--- a/orak/templates/b2bhome.html
+++ b/orak/templates/b2bhome.html
@@ -4,7 +4,7 @@
 
 <div class="card" style="width: 50rem; margin: 0 auto; margin-top: 20px;">
     <div class="card-header" style="background-color: #4A3386; text-align: center;">
-        <h4 style="color: #FFCA08"> B2B Bulk Upload </h4>
+        <h4 style="color: #FFCA08"> B2B Util </h4>
     </div>
     <div class="card-body">
         <form method="POST" action="">
